# athena-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.example.toml
.github/workflows/: audit.yml  ci.yml  docs.yml  release.yml
docs/: CNAME  _config.yml  guide.md  index.md
src/: aws.rs  cli.rs  config.rs  context.rs  lib.rs  main.rs  validation.rs
src/athena/: client.rs
src/commands/: common.rs  database.rs  history.rs  mod.rs  query.rs  workgroup.rs
src/commands/database/: describe.rs  list.rs  mod.rs  tables.rs
src/commands/database/utils/: display.rs  mod.rs
src/commands/history/: fields.rs  list.rs  mod.rs
src/commands/inspect/: detail.rs  download.rs  fields.rs  mod.rs
src/utils/: filter.rs  mod.rs
