[package]
name = "athena-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
aws-config = "1.1.1"
aws-sdk-athena = "1.9.0"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
prettytable-rs = "0.10"
serde_json = "1.0"
futures = "0.3"
polars = "0.35"
humantime = "2.1"
directories = "5.0"
config = { version = "0.13", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
humantime-serde = "1.1"
dirs = "5.0"
toml = "0.8"
byte-unit = "4.0"
dialoguer = "0.11"
chrono = "0.4"