[package]
name = "athena-cli"
version = "0.1.0"
edition = "2021"
description = "A command-line interface for AWS Athena with interactive query execution and result management"
license = "MIT"
repository = "https://github.com/Andyhoang/athena-cli"
documentation = "https://github.com/Andyhoang/athena-cli#readme"
readme = "README.md"
keywords = ["aws", "athena", "cli", "database", "sql"]
categories = ["command-line-utilities", "database"]
authors = ["Andy Hoang <ngocdunghoangdl@gmail.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
aws-config = "1.1.1"
aws-sdk-athena = "1.9.0"
aws-sdk-s3 = "1.9.0"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
prettytable-rs = "0.10"
serde_json = "1.0"
futures = "0.3"
polars = "0.46"
humantime = "2.1"
directories = "6.0"
config = { version = "0.15", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
humantime-serde = "1.1"
dirs = "6.0"
toml = "0.8"
byte-unit = "5.1"
dialoguer = "0.11"
chrono = "0.4"
url = "2.4"
tabled = "0.15"
owo-colors = "4.0"
console = "0.15"